--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "json-server": "^0.17.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.4.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.4.4",
     "uuid": "^8.3.2",
